[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/Node.gd" type="Script" id=1]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1, 0.5, 1 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 2, 1, 2 )

[sub_resource type="CubeMesh" id=3]
size = Vector3( 2, 1.01, 2 )

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 1, 0, 0, 0.345098 )

[node name="Node" type="Spatial"]
script = ExtResource( 1 )

[node name="StaticBody" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="MeshMouseOver" type="MeshInstance" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.51, 0 )
visible = false
mesh = SubResource( 3 )
material/0 = SubResource( 4 )
[connection signal="mouse_entered" from="StaticBody" to="." method="_on_StaticBody_mouse_entered"]
[connection signal="mouse_exited" from="StaticBody" to="." method="_on_StaticBody_mouse_exited"]
